--- a/src/lang/en/vuetify/AppDrawer.json
+++ b/src/lang/en/vuetify/AppDrawer.json
@@ -1,4 +1,4 @@
 {
-  "becomeASponsor": "Become a Patron",
-  "diamondSponsors": "Diamond Sponsors"
+  "becomeASponsor": "Devenir un Patron",
+  "diamondSponsors": "Sponsors de diamant"
 }
