--- a/src/lang/en/vuetify/Home.json
+++ b/src/lang/en/vuetify/Home.json
@@ -1,58 +1,58 @@
 {
-  "announcementBanner": "Aww yisss, this is an exciting announcement! Or maybe its an advertisement!",
+  "announcementBanner": "Oh yeah, c'est une annonce importante ! Ou peut-être une publicité !",
   "heading1": "Vuetify",
   "heading1cont": "Material Component Framework",
-  "getStarted": "Get Started",
-  "getHelp": "Get Help",
+  "getStarted": "Commencer",
+  "getHelp": "Obtenir de l'aide",
   "features": [
     {
       "img": "https://cdn.vuetifyjs.com/images/home/feature1.svg",
-      "title": "Ready-Made Project Scaffolding",
-      "text": "Vuetify comes ready to go with 8 pre-made vue-cli templates. From simple html to full-blown SSR you are ready to go in minutes."
+      "title": "Fondations de projets prêtes à l'emploi",
+      "text": "Vuetify propose 8 templates vue-cli. Du simple HTML au véritable SSR, vous êtes prêts à développer en quelques minutes."
     },
     {
       "img": "https://cdn.vuetifyjs.com/images/home/feature2.svg",
-      "title": "Semantic Material Components",
-      "text": "Be prepared for an armada of specialized components at your disposal. With over 80 in total, there is a solution for any application."
+      "title": "Composants Material et sémantiques",
+      "text": "Préparez-vous à une armada de composants spécialisés mis à votre disposition. Avec plus de 80 composants, il y a une solution pour chaque application."
     },
     {
       "img": "https://cdn.vuetifyjs.com/images/home/feature3.svg",
-      "title": "Vibrant Community",
-      "text": "When you run into a roadblock, you need assistance right away. Vuetify offers chat support in our growing community on Discord."
+      "title": "Communauté dynamique",
+      "text": "Lorsque vous êtes confronté à un obstacle, vous avec besoin d'aide le plus rapidement possible. Vuetify propose un support en ligne par chat grâce à la communauté grandissante sur Discord."
     }
   ],
-  "checkFeaturesTitle": "All the Tools You Need",
-  "checkFeaturesTitleCtd": "To Build Incredible User Interfaces",
+  "checkFeaturesTitle": "Tous les outils dont vous avez besoin",
+  "checkFeaturesTitleCtd": "Pour construire d'incroyables Interfaces Utilisateurs",
   "checkFeatures": [
-    "Community Chat Support",
-    "Dynamic Themes",
-    "SSR and PWA Support",
-    "8 vue-cli Templates"
+    "Soutien communautaire",
+    "Thèmes dynamiques",
+    "Support du SSR et PWA",
+    "8 templates vue-cli"
   ],
   "checkFeaturesCtd": [
-    "80+ Material Design Components",
-    "A La Carte Importing",
-    "Transition Components",
-    "Blazing Fast"
+    "Plus de 80 composants Material Design",
+    "Imports À La Carte",
+    "Composants de transition",
+    "Ultra-rapide"
   ],
-  "componentFramework": "Component Framework",
+  "componentFramework": "Framework de composants",
   "letterFromAuthor": [
-    "Hey there,",
-    "I know choosing a UI framework can be a daunting task -- there are so many options to choose from and every one of them claims that they are the best. So you have to decide for *yourself*: what are the metrics for success?",
-    "This was me almost a year ago. There were plenty of UI toolkits to choose from, but none of them had everything that I needed, and that is why I started working on Vuetify.",
-    "I am extremely humbled that you have considered using Vuetify as your next UI Framework. A lot of care has went into crafting the perfect setup for taking any idea from conception to production. I look forward to you joining the Vuetify community and am excited to see what incredible interfaces you create!"
+    "Hé,",
+    "Je sais que choisir un framework front-end peut être une tâche décourageante -- il y a tellement d'options à prendre en compte et chacun d'entre eux se proclame d'être le meilleur. Donc vous devez décider pour vous-même : quels sont les métriques du succès ?",
+    "C'était moi il y a un an. Il fallait choisir parmi des tas d'outils front-end, mais aucun d'entre eux n'avaient tout ce dont j'avais besoin, et c'est pour cela que j'ai commencé à travailler sur Vuetify.",
+    "Je suis extrêmement touché que vous ayez considéré à utiliser Vuetify comme framework front-end. Beaucoup d'attention a été consacrée dans l'élaboration d'une configuration parfaite pour développer n'importe quelle idée depuis de la conception jusqu'à la production. J'attend avec impatience votre participation à la communauté Vuetify, et je suis excité de voir quelles choses incroyables vous allez créer !"
   ],
-  "authorOfVuetify": "Author of Vuetify",
+  "authorOfVuetify": "Créateur de Vuetify",
   "support": {
-    "hasVuetifyHelped": "Has Vuetify helped you create an amazing application?",
-    "showYourSupport": "Show your support for Vuetify by",
-    "becomingAPatron": "becoming a patron"
+    "hasVuetifyHelped": "Est-ce que Vuetify vous a permis de créer une incroyable application ?",
+    "showYourSupport": "Montrez votre support à Vuetify en",
+    "becomingAPatron": "devenant un patron"
   },
-  "becomeSponsor": "Become a Sponsor",
-  "proudlySponsoredBy": "Patreon Sponsors",
-  "callout": "Supercharge your Development",
-  "madeWithVuetify": "Projects Made With/For Vuetify",
+  "becomeSponsor": "Devenir un Sponsor",
+  "proudlySponsoredBy": "Sponsors Patreon",
+  "callout": "Boostez votre productivité",
+  "madeWithVuetify": "Projets créés avec/pour Vuetify",
   "materialDesign": "Material Design",
   "mit": "MIT License",
-  "specialSponsors": "Special Sponsors"
+  "specialSponsors": "Sponsors spéciaux"
 }
