--- a/src/lang/en/vuetify/Store.json
+++ b/src/lang/en/vuetify/Store.json
@@ -1,39 +1,39 @@
 {
-  "indexHeader": "Welcome to our new Store!",
-  "indexSubheader": "Supercharge your Development",
-  "cartHeader": "Your Cart",
-  "cartSubheader": "You're almost done!",
-  "cartEmptySubheader": "Your cart is currently empty",
-  "thankYouHeader": "Thank you!",
-  "thankYouSubheader": "Your purchase helps support the continued maintenance and development of Vuetify",
-  "helpSupport": "Help support Vuetify's ongoing development and get you and your team some swag!",
-  "checkout": "Proceeed to checkout",
-  "addToCart": "Add to Cart",
-  "details": "Details",
+  "indexHeader": "Bienvenue dans notre nouvelle boutique !",
+  "indexSubheader": "Turbocharger votre productivité",
+  "cartHeader": "Votre panier",
+  "cartSubheader": "Yous avez bien terminé !",
+  "cartEmptySubheader": "Votre panier est vide",
+  "thankYouHeader": "Merci !",
+  "thankYouSubheader": "Votre achat permet d'assurer la maintenance et le développement de Vuetify",
+  "helpSupport": "Supportez les prochains développements sur Vuetify, et donnez un peu de style à vous et à votre équipe !",
+  "checkout": "Procéder au paiement",
+  "addToCart": "Ajouter au panier",
+  "details": "Détails",
   "description": "Description",
-  "back": "Back",
-  "backToStore": "Continue Shopping",
-  "thankYouBack": "Having issues?<br>Come to the [community](https://community.vuetifyjs.com)",
-  "onSale": "Sale",
+  "back": "Retour",
+  "backToStore": "Continuer à acheter",
+  "thankYouBack": "Un problème ??<br>Parlez-en à la [communauté](https://community.vuetifyjs.com)",
+  "onSale": "En solde",
   "cartHeaders": [
     {
-      "text": "Product",
+      "text": "Produit",
       "value": false,
       "sortable": false
     },
     {
-      "text": "Name",
+      "text": "Nom",
       "value": false,
       "sortable": false
     },
     {
-      "text": "Price",
+      "text": "Prix",
       "align": "right",
       "value": false,
       "sortable": false
     },
     {
-      "text": "Quantity",
+      "text": "Quantité",
       "align": "right",
       "value": false,
       "sortable": false,
